<resources>
    <string name="app_name">Misha Machine Test</string>
    <string name="developed_and_design_by_mr_nasim_ansari">Developed and Design By Mr. Nasim Ansari</string>
    <string name="note_title">Note Title</string>
    <string name="timestamp">TimeStamp</string>
    <string name="enter_note_title">Enter Note Title</string>
    <string name="enter_note_description">Enter Note Description</string>
    <string name="button">Save</string>
    <string name="attach">Attach</string>
    <string name="bold">Bold</string>
    <string name="italic">Italic</string>
    <string name="underline">Underline</string>
    <string name="note_title_1">Note Title</string>
    <string name="note_description">Note Description</string>
    <string name="note_created_time">Note Created Time</string>
</resources>